[build-system]
requires = ["flit-core >= 3.8"]
build-backend = "flit_core.buildapi"

[project]
name = "external_fixturepkg"
version = "1.0.0"
description = "Just an example project built with build/flit for testing purpose"
readme = "README.md"
requires-python = ">= 3.7"

dependencies = [ ]

[project.scripts]
pyproject-build = "build.__main__:entrypoint"

[tool.flit.sdist]
exclude = ["**/__pycache__", "**/*.egg-info"]
